--- a/themes/hugo-clarity/exampleSite/config/_default/params.toml
+++ b/themes/hugo-clarity/exampleSite/config/_default/params.toml
@@ -61,7 +61,7 @@ centerLogo = false # Set to "true" for centering or "false" for left aligned.
 codeMaxLines = 7
 
 # disable showing line numbers by default. Switch to `true` if you'd rather have them on.
-codeLineNumbers = false
+codeLineNumbers = true
 
 # enable math notation. Switch to `true` to enable mathjax in your site.
 enableMathNotation = false
