--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -83,8 +83,8 @@ mobileNavigation = "left" # if you prefer right change to 'right'
 
 # please also note that mode toggle UI will remain in place. That way, if a user prefers darkmode, they can have their way.
 
-#enforceLightMode = false
-enforceDarkMode = false
+enforceLightMode = true
+#enforceDarkMode = false
 
 # customize footer icon. see issue https://github.com/chipzoller/hugo-clarity/issues/77
 # footerLogo = "icons/copy.svg"
