--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,9 +2,9 @@
 enableSearch = true
 
 # socials
-twitter = "@janedoe"
+#twitter = "@janedoe"
 largeTwitterCard = false # set to true if you want to show a large twitter card image. The default is a small twitter card image
-introDescription = "Technophile, perpetual student, continual incremental improvement."
+introDescription = "Technophile, perpetual learner, continuous incremental improvement."
 introURL = "about/" # set the url for the 'read more' button below the introDescription, or set to false to not show the button
 description = "A blog about my learning and experiments on Cloud Devops, Cloud Networking and everything cloud." # Set your site's meta tag (SEO) description here. Alternatively set this description in your home page content file e.g. content/_index.md. Whatever is set in the latter will take precedence.
 keywords = ["cloud networking", "hybrid cloud networking", "cloud devops", "terraform"] # Set your site's meta tag (SEO) keywords here. Alternatively set these in your home page content file e.g. content/_index.md. Whatever is set in the latter will take precedence.
